<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:background="@color/background_primary_alpha" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/background_primary_alpha" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/tvTitle" android:paddingLeft="16.0dip" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/question_exit" android:fontFamily="sans-serif" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="64.0dip">
            <com.ctrlplusz.anytextview.AnyTextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/tvYes" android:background="@drawable/button_dialog_focus" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:textAllCaps="true" android:fontFamily="sans-serif-medium" />
            <com.ctrlplusz.anytextview.AnyTextView android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/tvNo" android:background="@drawable/button_dialog_focus" android:paddingLeft="20.0dip" android:paddingTop="10.0dip" android:paddingRight="20.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no" android:layout_toLeftOf="@id/tvYes" android:layout_centerVertical="true" android:textAllCaps="true" android:fontFamily="sans-serif-medium" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>