<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/background_primary_light" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@color/background_primary_light" android:layout_width="fill_parent" android:layout_height="?actionBarSize">
        <ImageView android:id="@id/imgBack" android:background="@drawable/search_focus" android:padding="10.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_arrow_back_white_24dp" android:layout_centerVertical="true" />
        <com.ctrlplusz.anytextview.AnyTextView android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/download_manager" android:layout_toRightOf="@id/imgBack" android:layout_centerVertical="true" style="@style/Title" />
    </RelativeLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ListView android:id="@id/size_ordered_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@drawable/search_focus" android:drawSelectorOnTop="false" />
        <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/empty" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/no_downloads" android:fontFamily="sans-serif-medium"
          xmlns:android="http://schemas.android.com/apk/res/android" />
    </FrameLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/selection_menu" android:background="@android:drawable/bottom_bar" android:paddingLeft="4.0dip" android:paddingTop="5.0dip" android:paddingRight="4.0dip" android:paddingBottom="1.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/selection_delete" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <Button android:id="@id/deselect_all" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/deselect_all" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>