<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="wrap_content" android:layout_height="wrap_content" app:cardBackgroundColor="@android:color/white" app:cardCornerRadius="2.0dip" app:cardUseCompatPadding="true" app:contentPaddingBottom="@dimen/menuPaddingVertical" app:contentPaddingTop="@dimen/menuPaddingVertical"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RelativeLayout android:id="@id/popup_menu_rl_arrows" android:visibility="gone" android:layout_width="@dimen/menuWidth" android:layout_height="wrap_content">
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/popup_menu_ll_arrows" android:layout_width="fill_parent" android:layout_height="@dimen/menuItemHeight">
                <android.support.v7.widget.AppCompatImageButton android:id="@id/popup_menu_btn_back" android:background="@drawable/selector_light_theme" android:layout_width="0.0dip" android:layout_height="@dimen/menuItemHeight" android:layout_weight="1.0" app:srcCompat="@drawable/back" />
                <View android:background="@android:color/black" android:layout_width="@dimen/dividerWidth" android:layout_height="40.0dip" />
                <android.support.v7.widget.AppCompatImageButton android:id="@id/popup_menu_btn_forward" android:background="@drawable/selector_light_theme" android:layout_width="0.0dip" android:layout_height="@dimen/menuItemHeight" android:layout_weight="1.0" app:srcCompat="@drawable/forward" />
            </LinearLayout>
            <View android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="@dimen/dividerHeight" android:layout_below="@id/popup_menu_ll_arrows" />
        </RelativeLayout>
        <TextView android:textSize="@dimen/menuItemTextSize" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/popup_menu_btn_refresh" android:background="@drawable/selector_light_theme" android:paddingLeft="@dimen/menuPaddingHorizontal" android:paddingRight="@dimen/menuPaddingHorizontal" android:layout_width="@dimen/menuWidth" android:layout_height="@dimen/menuItemHeight" android:text="@string/menu_refresh" />
        <TextView android:textSize="@dimen/menuItemTextSize" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/popup_menu_btn_copy_link" android:background="@drawable/selector_light_theme" android:paddingLeft="@dimen/menuPaddingHorizontal" android:paddingRight="@dimen/menuPaddingHorizontal" android:layout_width="@dimen/menuWidth" android:layout_height="@dimen/menuItemHeight" android:text="@string/menu_copy_link" />
        <TextView android:textSize="@dimen/menuItemTextSize" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/popup_menu_btn_open_with_other_browser" android:background="@drawable/selector_light_theme" android:paddingLeft="@dimen/menuPaddingHorizontal" android:paddingRight="@dimen/menuPaddingHorizontal" android:layout_width="@dimen/menuWidth" android:layout_height="@dimen/menuItemHeight" android:text="@string/menu_open_with_other_browser" />
        <TextView android:textSize="@dimen/menuItemTextSize" android:textColor="@android:color/black" android:gravity="center_vertical" android:id="@id/popup_menu_btn_share" android:background="@drawable/selector_light_theme" android:paddingLeft="@dimen/menuPaddingHorizontal" android:paddingRight="@dimen/menuPaddingHorizontal" android:layout_width="@dimen/menuWidth" android:layout_height="@dimen/menuItemHeight" android:text="@string/menu_share" />
    </LinearLayout>
</androidx.cardview.widget.CardView>